--- a/database/sessiondb.properties
+++ b/database/sessiondb.properties
@@ -1,9 +1,5 @@
 #HSQL Database Engine 1.8.0.5
-<<<<<<< HEAD
-#Wed Aug 31 20:47:01 CST 2016
-=======
-#Mon Aug 29 20:25:29 CST 2016
->>>>>>> branch 'dev' of https://ericmore@github.com/ericmore/SmartPutty.git
+#Wed Aug 31 21:48:20 CST 2016
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
@@ -15,7 +11,7 @@ version=1.8.0
 hsqldb.default_table_type=memory
 hsqldb.cache_file_scale=1
 hsqldb.log_size=200
-modified=yes
+modified=no
 hsqldb.cache_version=1.7.0
 hsqldb.original_version=1.8.0
 hsqldb.compatible_version=1.8.0
