--- a/database/sessiondb.properties
+++ b/database/sessiondb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.0.10
-#Mon Apr 17 21:01:11 CST 2017
+#Sun Oct 08 18:25:05 CST 2017
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
@@ -11,7 +11,7 @@ version=1.8.0
 hsqldb.default_table_type=memory
 hsqldb.cache_file_scale=1
 hsqldb.log_size=200
-modified=no
+modified=yes
 hsqldb.cache_version=1.7.0
 hsqldb.original_version=1.8.0
 hsqldb.compatible_version=1.8.0
