Added "KiTTY" executable as an alternative to "PuTTY".

--- a/database/sessiondb.properties
+++ b/database/sessiondb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.0.10
-#Sun Oct 08 20:41:08 CST 2017
+#Fri Sep 29 12:59:21 CEST 2017
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
