--- a/build.gradle
+++ b/build.gradle
@@ -12,9 +12,11 @@ repositories {
 
 dependencies {
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.14.Final'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'commons-net', name: 'commons-net', version: '3.5'
     compile group: 'org.hsqldb', name: 'hsqldb', version: '1.8.0.10'
+    compile group: 'com.h2database', name: 'h2', version: '1.3.148'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'org.mod4j.org.eclipse', name: 'jface', version: '3.5.0'
     compile group: 'org.eclipse.swt', name: 'org.eclipse.swt.win32.win32.x86_64', version: '4.3'
@@ -31,6 +33,7 @@ distributions {
 			      }
 
 			  from 'VERSION'
+              from 'start.bat'
 			  into ('config') {from 'config'}
 			  into ('database') {from 'database'}
 			  into ('app') {from 'app'}
@@ -47,8 +50,8 @@ sourceSets {
          srcDir 'src'
       }
       resources {
-	      srcDir 'src'
-	      include '*.properties'
+	      srcDir 'src/main/resources'
+	      include '*.*'
 	      output.resourcesDir = 'build/resources/main'
 	    }
    }
