--- a/database/sessiondb.properties
+++ b/database/sessiondb.properties
@@ -1,17 +1,5 @@
-#HSQL Database Engine 1.8.0.10
-#Sat Dec 30 19:49:06 CST 2017
-hsqldb.script_format=0
-runtime.gc_interval=0
-sql.enforce_strict_size=false
-hsqldb.cache_size_scale=8
-readonly=false
-hsqldb.nio_data_file=true
-hsqldb.cache_scale=14
-version=1.8.0
-hsqldb.default_table_type=memory
-hsqldb.cache_file_scale=1
-hsqldb.log_size=200
+#HSQL Database Engine 2.4.0
+#Sat Mar 03 11:47:36 UTC 2018
+version=2.4.0
 modified=yes
-hsqldb.cache_version=1.7.0
-hsqldb.original_version=1.8.0
-hsqldb.compatible_version=1.8.0
+tx_timestamp=0
