--- a/database/sessiondb.properties
+++ b/database/sessiondb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 1.8.0.10
-#Sat Dec 30 19:49:06 CST 2017
+#Fri Sep 25 17:56:06 CEST 2020
 hsqldb.script_format=0
 runtime.gc_interval=0
 sql.enforce_strict_size=false
@@ -11,7 +11,7 @@ version=1.8.0
 hsqldb.default_table_type=memory
 hsqldb.cache_file_scale=1
 hsqldb.log_size=200
-modified=yes
+modified=no
 hsqldb.cache_version=1.7.0
 hsqldb.original_version=1.8.0
 hsqldb.compatible_version=1.8.0
