--- a/build.gradle
+++ b/build.gradle
@@ -15,35 +15,15 @@ repositories {
 
 
 dependencies {
+	compile fileTree(dir: 'lib', include: '*.jar')
     compile group: 'commons-io', name: 'commons-io', version: '2.5'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'commons-net', name: 'commons-net', version: '3.5'
     compile group: 'org.hsqldb', name: 'hsqldb', version: '1.8.0.10'
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
-    compile group: 'org.mod4j.org.eclipse', name: 'jface', version: '3.5.0'
 	compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
 
-	// Detect architecture to use one 32 or 64 bits SWT library:
-	final String osArch = System.getProperty("os.arch");
-	if ("x86".equals(osArch)) {
-		compile group: 'org.eclipse.swt', name: 'org.eclipse.swt.win32.win32.x86', version: '4.3'
-	} else if ("x86_64".equals(osArch)) {
-		compile group: 'org.eclipse.swt', name: 'org.eclipse.swt.win32.win32.x86_64', version: '4.3'
-	}
 
-	// // Detect operating system (for later uses):
-	// final String osName = System.getProperty("os.name").toLowerCase();
-	// if (osName.contains("linux")) {
-	// 	println 'linux'
-	// } else if (osName.contains("mac os x") || osName.contains("darwin") || osName.contains("osx")) {
-	// 	println 'macos'
-	// } else if (osName.contains("windows")) {
-	// 	println 'windows'
-	// } else if (osName.contains("sunos") || osName.contains("solaris")) {
-	// 	println 'solaris'
-	// } else if (osName.contains("freebsd")) {
-	// 	println 'freebsd'
-	// }
 }
 
 distributions {
@@ -106,13 +86,13 @@ task copyImage(type: Copy) {
 }
 
 
-jar {
-    manifest {
-        attributes (
-        	'Main-Class': 'UI.MainFrame',
-        	'Class-Path': configurations.runtime.files.collect { "lib/$it.name" }.join(' ')
-        	)
-    }
-}
+//jar {
+//    manifest {
+//        attributes (
+//        	'Main-Class': 'UI.MainFrame',
+//        	'Class-Path': configurations.runtime.files.collect { "lib/$it.name" }.join(' ')
+//        	)
+//    }
+//}
 
 mainClassName = 'UI.MainFrame'
