1.use logback 2.System configuration panel feature ready

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,10 @@ dependencies {
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
     compile group: 'commons-net', name: 'commons-net', version: '3.5'
     compile group: 'com.h2database', name: 'h2', version: '1.4.200'
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+//    compile group: 'log4j', name: 'log4j', version: '1.2.17'
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.22.Final'
     compile group: 'org.projectlombok', name: 'lombok', version: '1.16.10'
