--- a/build.gradle
+++ b/build.gradle
@@ -77,7 +77,7 @@ distZip {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.sp.UI.MainFrame',
+                'Main-Class': 'com.sp.ui.MainFrame',
         )
     }
     from(configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
@@ -86,7 +86,7 @@ jar {
         exclude 'META-INF/*.DSA'
         exclude 'META-INF/*.RSA'
     }
-    baseName 'SmartPutty-x64'
+    baseName 'SmartPutty'
 }
 
 
